--- a/src/app/bookview/bookview.component.html
+++ b/src/app/bookview/bookview.component.html
@@ -20,6 +20,7 @@
                     <td>{{i.author}}</td>
                     <td>{{i.year}}</td>
                     <td>{{i.stock}}</td>
+                    <td><button class="btn btn-danger" (click)="deleteBooks(i.id)">Delete</button></td>
                   </tr>
                   
                 </tbody>
